@@ -1,0 +1,1 @@
+declare C as constructor (reference to constant C)
